# idea

./: .env.example  .gitignore  ANTHROPIC_SETUP.md  BLOG_CONTENT_SETUP.md  CHANGES_DIFF_SUMMARY.md  EMAIL_TO_SEND.txt  ENTREPRENEUR_PSYCHOLOGY_ASSESSMENT.md  FINAL_OPTIMIZATIONS_DIFF.md  FINAL_OPTIMIZATION_SUMMARY.md  FINAL_PROMPTS.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_GUIDE.md  NEWSLETTER_ARCHITECTURE.md  NEWSLETTER_VALUE_ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS_DIFF.md  PERFORMANCE_REDESIGN_SUMMARY.md  QUICK_MARKETING_ACTIONS.md  README.md  REDESIGN_IMPLEMENTATION_SUMMARY.md  SETUP_AND_RUN.md  START_SERVERS.bat  TECHNICAL_BLUEPRINT.md  TOOL_FIX_SUMMARY.md  TRIGGERED_EMAILS_SETUP.md  TRUE_STREAMING_IMPLEMENTATION_DIFF.md  UNIFIED_DISCOVERY_AUDIT.md  api.py  app.py  database.py  delete_all_validations.py  docker-compose.yml  email_service.py  migrate_usage_fields.py  package-lock.json  pyproject.toml  setup.ps1  simple_stress_test.py  start-servers.ps1  stress_test.py  stress_test_advanced.py  (+11 more)
app/: __init__.py  constants.py  utils.py
docs/: 3_LAYER_ARCHITECTURE_IMPLEMENTATION.md  ACCESSIBILITY_AND_LAYOUT_FIXES.md  ACCESS_DEVTOOLS_WITHOUT_F12.md  ACCURATE_TEST_RESULTS.md  ACTUAL_WAIT_TIME_ANALYSIS.md  ADMIN_MFA_SETUP.md  ADMIN_README.md  AI_WEBSITE_FEEDBACK_TOOLS.md  ANONYMOUS_AUTOMATED_MARKETING.md  API_CALLS_TIME_BREAKDOWN.md  AUTHENTICATION_FIX.md  AUTHENTICATION_IMPLEMENTATION.md  B2B_WITHOUT_SALES_CALLS.md  B2C_STRATEGY_AND_IMPROVEMENTS.md  BALANCED_HONEST_ASSESSMENT.md  BASIC_VS_ENHANCED_COMPARISON.md  BETTER_PRICING_STRATEGY.md  BLUEPRINT_APPROACH.md  BLUEPRINT_IMPLEMENTATION_PLAN.md  BLUEPRINT_MIGRATION_COMPLETE.md  BLUEPRINT_MIGRATION_GUIDE.md  BLUEPRINT_MIGRATION_PLAN.md  BLUEPRINT_MIGRATION_STATUS.md  BLUEPRINT_SPLIT_STRATEGY.md  BLUEPRINT_STATUS.md  BLUEPRINT_STRUCTURE.md  BOILERPLATE_REFACTORING_PLAN.md  BREAK_EVEN_AND_VALUE_FOCUS.md  BRUTALLY_HONEST_ASSESSMENT.md  BRUTAL_DECISION_AND_ALTERNATIVES.md  CANCELLATION_REASON_FEATURE.md  CLAUDE_SETUP.md  CODE_REVIEW_ACTUAL_FILES.md  CODE_REVIEW_SUMMARY.md  COMPACT_LAYOUT_SUGGESTIONS.md  COMPETITIVE_ANALYSIS.md  COMPLETE_COST_ANALYSIS.md  COMPLETE_FOLDER_OPTIMIZATION_REVIEW.md  COMPREHENSIVE_TEST_STATUS.md  CONTENT_VALUE_ANALYSIS.md  (+157 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.js  start-dev.ps1  tailwind.config.js  tailwind.validation.preset.js  test-optimizations.js  vercel.json  vite.config.js
migrations/: add_founder_connect_tables.py  add_founder_connect_tables.sql  add_founder_psychology_column.py  add_founder_psychology_column.sql  add_tool_cache_table.sql
static_data/: ai.json  (+1 more)
(+256 files in other folders)
