[project]
name = "startup_idea_crew"
version = "0.1.0"
description = "AI-powered startup idea recommendation platform using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0",
    "Flask>=3.0.0,<4.0.0",
    "Flask-SQLAlchemy>=3.1.0,<4.0.0",
    "Flask-CORS>=4.0.0,<5.0.0",
    "Flask-Compress>=1.14,<2.0.0",
    "Werkzeug>=3.0.0,<4.0.0",
    "stripe>=7.0.0,<8.0.0",
]

[project.scripts]
startup_idea_crew = "startup_idea_crew.main:run"
run_crew = "startup_idea_crew.main:run"
test = "startup_idea_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

