[project]
name = "startup_idea_crew"
version = "0.1.0"
description = "AI-powered startup idea recommendation platform using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0",
    "Flask>=3.0.0,<4.0.0",
    "Flask-SQLAlchemy>=3.1.0,<4.0.0",
    "Flask-CORS>=4.0.0,<5.0.0",
    "Flask-Compress>=1.14,<2.0.0",
    "Flask-Limiter>=3.5.0,<4.0.0",
    "Werkzeug>=3.0.0,<4.0.0",
    "stripe>=7.0.0,<8.0.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL driver
    "anthropic>=0.34.0,<1.0.0",  # Claude API for validation
    "pyotp>=2.9.0",  # TOTP for MFA
    "redis>=5.0.0,<6.0.0",  # Redis for rate limiting and caching (optional)
    "sentry-sdk[flask]>=2.0.0",  # Error tracking (optional but recommended)
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[project.scripts]
startup_idea_crew = "startup_idea_crew.main:run"
run_crew = "startup_idea_crew.main:run"
test = "startup_idea_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

